fix: fix semantic and spacing

--- a/style.css
+++ b/style.css
@@ -19,70 +19,22 @@
   --footer-height: 100px;
 }
 
-main {
-  /* fallback for older browsers */
-  height: calc(100vh - var(--footer-height) - 2rem);
-  height: calc(100svh - var(--footer-height) - 2rem);
-}
-
-.content-container {
-  background-color: var(--white);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 4.8rem;
-  padding: 1.2rem 3.2rem 3.2rem 3.2rem;
-  height: 100%;
-}
-
-.text-container {
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-  text-align: justify;
-}
-
-.title {
-  font-weight: lighter;
-  font-size: 16px;
-  font-family: "engravers-mt", sans-serif;
-  width: 2rem;
-  white-space: nowrap;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-only {
-    visibility: hidden;
-  }
-
-  .text-container {
-    flex-direction: row;
-    padding: 0 16.2rem;
-  }
-
-  .title {
-    font-size: 24px;
-    text-align: center;
-    margin-top: 4rem;
-  }
-
-  .content-container {
-    gap: 10rem;
-    padding: unset;
-  }
-}
-
 body {
   display: flex;
   flex-direction: column;
   font-family: "minion-pro", sans-serif;
   background-color: var(--white);
   color: var(--primary);
+  height: 100vh;
+  height: 100svh;
+}
+
+main {
+  flex-grow: 1;
 }
 
 footer {
-  height: var(--footer-height);
+  min-height: var(--footer-height);
   font-size: 12px;
   display: flex;
   flex-direction: column;
@@ -92,4 +44,61 @@ footer {
   background-color: var(--primary);
   color: var(--white);
   padding: 1rem;
+}
+
+header {
+  margin: 0 auto;
+  padding: 1.2rem 0;
+}
+
+section {
+  background-color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4.8rem;
+  padding: 1.2rem 3.2rem 3.2rem 3.2rem;
+  height: 100%;
+}
+
+address {
+  font-style: normal;
+}
+
+h1 {
+  font-weight: lighter;
+  font-size: 16px;
+  font-family: "engravers-mt", sans-serif;
+  width: 2rem;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+  text-align: justify;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-only {
+    visibility: hidden;
+  }
+
+  .text-container {
+    flex-direction: row;
+    padding: 5.2rem 16.2rem;
+  }
+
+  h1 {
+    font-size: 24px;
+    text-align: center;
+    margin-top: 4rem;
+  }
+
+  section {
+    gap: 10rem;
+    padding: unset;
+  }
 }
